--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -13,13 +13,12 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	color: #6fb3b8;
+	color: #388087;
 }
 
 .AboutMe h1 {
 	margin-top: 0px;
 	margin-bottom: 0px;
-	color: #388087;
 	font-size: 3vw;
 	font-family: "Sora";
 	font-style: normal;
@@ -30,7 +29,7 @@
 	margin-bottom: 0px;
 	font-family: "Montserrat";
 	font-style: normal;
-	font-weight: 400;
+	font-weight: 500;
 	font-size: 1.05vw;
 	line-height: 180%;
 	text-align: center;
@@ -60,13 +59,13 @@
 	.AboutMe {
 		margin-top: 0px;
 		margin-left: 0px;
-		width: 55vw;
+		width: 70vw;
 	}
 	.AboutMe h1 {
-		font-size: 5vw;
+		font-size: 6vw;
 	}
 	.AboutMe h5 {
-		font-size: 2vw;
+		font-size: 2.4vw;
 		line-height: 220%;
 	}
 	.Spotify {
